--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <p>Hola</p>
     <h1>Aqui esta el titulo de la pagina</h1>
   </body>
 </html>
